jump to link working with bugs

--- a/src-unpack-to-chrome/sidepanel/sidepanel.css
+++ b/src-unpack-to-chrome/sidepanel/sidepanel.css
@@ -12,6 +12,7 @@
 
 *{
     font-family: var(--font);
+    transition: 0.1s ease-out;
 }
 
 body {
@@ -83,6 +84,25 @@ textarea{
     border-radius:  var(--b-radius); /* Rounded borders */
 }
 
+#highlight-links{
+
+}
+
+.highlight-link {
+    padding:1em;
+    height:3em;
+    overflow:hidden;
+    border-radius: var(--b-radius);
+    background:var(--secondary);
+    margin:1em;
+    box-shadow: 0 3px 2px 0 rgba(0,0,0,0.02);
+}
+
+.highlight-link:hover{
+    cursor: pointer;
+    transform:translate(0,-2px) scale(1.04);
+    box-shadow: 0 5px 5px 0 rgba(0,0,0,0.02);
+}
 
 
 
